k8s/backend-deplyment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: chatbot-backend
  namespace: chatbot

spec:

  replicas: 2

  selector:
    matchLabels:
      app: chatbot-backend

  template:

    metadata:
      labels:
        app: chatbot-backend

    spec:

      nodeSelector:
        app-node: "true"

      containers:

        - name: backend

          image: chatbot-backend:1.0

          imagePullPolicy: IfNotPresent

          ports:

            - containerPort: 3000
