k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: chatbot-frontend
  namespace: chatbot

spec:

  replicas: 2

  selector:
    matchLabels:
      app: chatbot-frontend

  template:

    metadata:
      labels:
        app: chatbot-frontend

    spec:

      nodeSelector:
        app-node: "true"

      containers:

        - name: frontend

          image: chatbot-frontend:1.0

          imagePullPolicy: IfNotPresent

          ports:

            - containerPort: 80
