k8s/backened-sevice.yaml
apiVersion: v1
kind: Service

metadata:
  name: chatbot-backend
  namespace: chatbot

spec:

  type: ClusterIP

  selector:
    app: chatbot-backend

  ports:

    - port: 3000
      targetPort: 3000
